# CQBench

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.sha256  README.md  RELEASE_CHECKLIST.md  pyproject.toml
benchmark/: README.md  manifest.json
benchmark/comparisons/: openai_vs_baselines.csv
benchmark/manual_audit/: REVIEW_RUBRIC.md  candidates.jsonl
benchmark/reports/dsc/: complexity_summary.csv  odc_incidence.csv  report.md  summary.csv  (+1 more)
cqbench/: __init__.py  analyzers.py  cli.py  config.py  evaluate.py  historical.py  io.py  large.py  legacy.py  report.py  review.py  rules.py  structural.py
cqbench/rules/: README.md  manifest.json  semgrep.json
data/: DATA.md
experiments/claude-opus-4-8/: EXAMPLES_defects_cwes.md  README.md  RESULTS_paper_format.md  RUN_REPORT.md  comparison.csv  cwe_distribution.csv  examples.py  extract_cwes.py  issue_dist.py  issue_distribution.csv  paper_format.py  predictions.jsonl  results.jsonl  subset_refs.jsonl  subset_tasks.jsonl
mappings/: README.md
mappings/c/: clang_tidy_odc.xlsx
mappings/java/: pmd_odc.xlsx
mappings/python/: pylint_odc.xlsx
replication/: README.md
replication/calibration/: README_calibration.md  reprocess_calibration.py  run_codegen_java.py  run_codegen_java.x  run_codegen_python.py  run_codegen_python.x  sample_calibration_subset.py
support/: __init__.py  complexity_metrics_all_functions.py  complexity_metrics_extended.py  rq4_build_table.py
tests/cqbench/: test_analyzers.py  test_io_and_evaluate.py  test_review.py  test_structural.py
tools/: build_checksums.py  evaluate_with_progress.py
(+78 files in other folders)
