[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqbench"
version = "0.1.0"
description = "Static code-quality stress benchmark for Python, Java, and C"
requires-python = ">=3.9"
dependencies = [
  "lizard==1.17.25",
  "matplotlib>=3.7,<4",
  "numpy>=1.24,<3",
  "openpyxl==3.1.5",
  "pandas>=1.1,<3",
  "pyarrow==15.0.0",
  "pygments==2.18.0",
  "tree-sitter==0.23.2",
  "tree-sitter-language-pack>=0.7,<1",
]

[project.optional-dependencies]
analysis = [
  "pylint==3.3.6",
  "semgrep==1.120.0",
]
test = ["pytest>=8,<9"]

[project.scripts]
cqbench = "cqbench.cli:main"

[tool.setuptools]
packages = ["cqbench", "support"]

[tool.setuptools.package-data]
cqbench = ["rules/*.json", "rules/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests/cqbench"]
